656384 Background stat = Actions info: DigSuccess = 27317 DigError = 0 DigMiss = 120334 Rich places = 623 Places = 26072 MoneySuccess = 27312 Wallet size = 656125 TreasureNotFound = 0 ExplorerSuccess = 169754 ExplorerErrors = 2 Explored size1 = 0 Explored size2 = 0 DugFull = 0 LicenseError size = 2350 LicensesStore = 2 PaidLicenses = 29537 FreeLicenses = 2 licenseFull 0 getLicenseAttempt 31887 schedulerMoneyRetry 1408 schedulerAttemptLicense 32145 rpsSuccess 389401 exploredAreas63 = 4 explored63Done = 6970 skipped63 = 8175 Total Garbage Collections: 1079541 Total Garbage Collection Time (ms): 32802445